--- a/app/src/main/res/drawable/ic_baseline_person_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_person_24.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
 
-</selector>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12,12c1.66,0 2.99,-1.34 2.99,-3s-1.34,-3 -2.99,-3 -2.99,1.34 -2.99,3 1.34,3 2.99,3zM12,14.5c-2.33,0 -7,1.17 -7,3.5v1.5h14v-1.5c0,-2.33 -4.67,-3.5 -7,-3.5z" />
+</vector>
