--- a/app/src/main/res/layout/fragment_facturas.xml
+++ b/app/src/main/res/layout/fragment_facturas.xml
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"/>
 
     <!-- Botón para agregar nueva factura -->
     <Button
@@ -25,17 +26,53 @@
         android:text="Agregar Factura"
         app:layout_constraintTop_toBottomOf="@id/textTituloFacturas"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
+
+    <!-- Títulos -->
+    <TextView
+        android:id="@+id/textTituloIdOrden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ID Orden"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textTituloFecha"
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textTituloFecha"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Fecha"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintStart_toEndOf="@id/textTituloIdOrden"
+        app:layout_constraintEnd_toStartOf="@id/textTituloAcciones"
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textTituloAcciones"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Acciones"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintStart_toEndOf="@id/textTituloFecha"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"/>
 
     <!-- RecyclerView para la lista de facturas -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFacturas"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintTop_toBottomOf="@id/textTituloIdOrden"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
