--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Iniciar seccion"
+                android:text="Iniciar Sesión"
                 android:id="@+id/loginText"
                 android:textSize="36sp"
                 android:textAlignment="center"
