--- a/app/src/main/res/layout/sale_description.xml
+++ b/app/src/main/res/layout/sale_description.xml
@@ -5,17 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Fecha actual -->
-
-    <!-- Botón "Guardar" -->
-
     <TextView
         android:id="@+id/textTituloOrdenVenta"
         android:layout_width="173dp"
         android:layout_height="34dp"
         android:layout_marginTop="16dp"
         android:text="Órden de Venta"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +25,6 @@
         app:layout_constraintStart_toEndOf="@+id/textTituloOrdenVenta"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Sección "Datos del Cliente" -->
 
     <Button
         android:id="@+id/btnGuardar"
@@ -55,23 +50,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <!-- Cédula -->
-    <EditText
+    <TextView
         android:id="@+id/editCedula"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="Cédula"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:minHeight="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDatosCliente" />
 
-    <!-- Nombre -->
-
-    <EditText
+    <TextView
         android:id="@+id/editNombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -79,7 +70,21 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="Nombre"
-        android:minHeight="48dp"
+        android:minHeight="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/editCedula"
+        app:layout_constraintTop_toBottomOf="@+id/textDatosCliente" />
+
+    <TextView
+        android:id="@+id/textViewAdrressSelecd"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:hint="Direccion"
+        android:minHeight="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNombre" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewAdrressSelecd" />
 
     <TextView
         android:id="@+id/textProductosFac"
@@ -107,15 +112,15 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/btnBuscarCliente"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintBottom_toTopOf="@+id/textName"
+        android:layout_margin="16dp"/>
 
     <Button
         android:id="@+id/btnAddProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Guardar"
+        android:layout_margin="5dp"
+        android:text="+ Agregar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintTop_toBottomOf="@id/btnBuscarCliente" />
@@ -126,13 +131,14 @@
         android:layout_height="wrap_content"
         android:text="Código"
         android:textSize="15sp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textProductosFac"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"/>
 
     <TextView
         android:id="@+id/textName"
+        android:textSize="15sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Nombre"
@@ -144,6 +150,7 @@
     <TextView
         android:id="@+id/textQuantity"
         android:layout_width="0dp"
+        android:textSize="15sp"
         android:layout_height="wrap_content"
         android:text="Cantidad"
         app:layout_constraintTop_toBottomOf="@id/textProductosFac"
@@ -153,6 +160,7 @@
 
     <TextView
         android:id="@+id/textPrice"
+        android:textSize="15sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Precio"
@@ -161,5 +169,81 @@
         android:textAlignment="center"
         android:layout_margin="16dp"/>
 
+    <TextView
+        android:id="@+id/textAccions"
+        android:textSize="15sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Acciones"
+        app:layout_constraintTop_toBottomOf="@id/textProductosFac"
+        app:layout_constraintStart_toEndOf="@id/textPrice"
+        android:textAlignment="center"
+        android:layout_margin="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewProductsAdd"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toBottomOf="@id/textName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textCodFac"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+
+    <TextView
+        android:id="@+id/textCodFac"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Factura"
+        android:textSize="12sp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductsAdd"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textArticles"
+        android:textSize="12sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Total Articulos"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductsAdd"
+        app:layout_constraintStart_toEndOf="@+id/textCodFac"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textDiscount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="SubTotal-12% Descuento"
+        android:textSize="12sp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductsAdd"
+        app:layout_constraintStart_toEndOf="@+id/textArticles"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textIva"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="IVA%"
+        android:textSize="12sp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductsAdd"
+        app:layout_constraintStart_toEndOf="@+id/textDiscount"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textTotal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Total"
+        android:textSize="12sp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductsAdd"
+        app:layout_constraintStart_toEndOf="@+id/textIva"
+        android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
