--- a/app/src/main/res/layout/sale_description.xml
+++ b/app/src/main/res/layout/sale_description.xml
@@ -129,7 +129,7 @@
         android:id="@+id/textCod"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Código"
+        android:text="Id"
         android:textSize="15sp"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textProductosFac"
@@ -148,13 +148,24 @@
         android:layout_margin="16dp"/>
 
     <TextView
+        android:id="@+id/textExist"
+        android:layout_width="0dp"
+        android:textSize="15sp"
+        android:layout_height="wrap_content"
+        android:text="Existencia"
+        app:layout_constraintTop_toBottomOf="@id/textProductosFac"
+        app:layout_constraintStart_toEndOf="@id/textName"
+        android:textAlignment="center"
+        android:layout_margin="16dp"/>
+
+    <TextView
         android:id="@+id/textQuantity"
         android:layout_width="0dp"
         android:textSize="15sp"
         android:layout_height="wrap_content"
         android:text="Cantidad"
         app:layout_constraintTop_toBottomOf="@id/textProductosFac"
-        app:layout_constraintStart_toEndOf="@id/textName"
+        app:layout_constraintStart_toEndOf="@id/textExist"
         android:textAlignment="center"
         android:layout_margin="16dp"/>
 
