--- a/app/src/main/res/layout/item_productadd.xml
+++ b/app/src/main/res/layout/item_productadd.xml
@@ -10,10 +10,10 @@
     <!-- ID del producto -->
     <TextView
         android:id="@+id/textProductIdAdd"
-        android:layout_width="26dp"
+        android:layout_width="29dp"
         android:layout_height="wrap_content"
         android:text="ID: "
-        android:textSize="12sp" />
+        android:textSize="11sp" />
 
     <!-- Nombre del producto -->
     <TextView
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
+        android:layout_marginStart="16dp"
         android:text="Nombre: "
         android:textSize="14sp"/>
 
@@ -45,7 +46,7 @@
         android:imeOptions="actionDone"
         android:maxLength="3"
         android:maxLines="1"
-        android:digits="123456789"
+        android:digits="0123456789"
         android:textSize="14sp"
         android:textStyle="bold"/>
 
@@ -54,6 +55,7 @@
         android:id="@+id/textProductPriceAdd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:text="Precio: $"
         android:textSize="14sp"/>
