--- a/app/src/main/res/layout/fragment_facturas.xml
+++ b/app/src/main/res/layout/fragment_facturas.xml
@@ -29,6 +29,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
+    <EditText
+        android:id="@+id/editTextSearchFac"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="Buscar"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
 
     <!-- Títulos -->
     <TextView
@@ -36,7 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="ID Orden"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/textTituloFecha"
         android:textAlignment="center"
@@ -47,7 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Fecha"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
         app:layout_constraintStart_toEndOf="@id/textTituloIdOrden"
         app:layout_constraintEnd_toStartOf="@id/textTituloAcciones"
         android:textAlignment="center"
@@ -58,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Acciones"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
         app:layout_constraintStart_toEndOf="@id/textTituloFecha"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
