--- a/app/src/main/res/layout/fragmeny_customer.xml
+++ b/app/src/main/res/layout/fragmeny_customer.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textTituloUsuarios"
+        android:id="@+id/textTituloCustomer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Usuarios"
+        android:text="Clientes"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,32 +17,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp"/>
 
-
-
-    <!-- Botón para agregar nuevo usuario -->
     <Button
-        android:id="@+id/btnAgregarUsuario"
+        android:id="@+id/btnAgregarCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar"
-        app:layout_constraintTop_toBottomOf="@id/textTituloUsuarios"
+        app:layout_constraintTop_toBottomOf="@id/textTituloCustomer"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/editTextSearchUser"
+        android:id="@+id/editTextSearchCustomer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="Buscar"
-        app:layout_constraintTop_toBottomOf="@id/textTituloUsuarios"
+        app:layout_constraintTop_toBottomOf="@id/textTituloCustomer"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="16dp"/>
 
-    <!-- RecyclerView para la tabla de usuarios -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewUsuarios"
+        android:id="@+id/recyclerViewCustomer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarUsuario"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarCustomer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
