--- a/app/src/main/res/layout/fragmeny_product.xml
+++ b/app/src/main/res/layout/fragmeny_product.xml
@@ -1,15 +1,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textTituloUsuarios"
+        android:id="@+id/textTituloProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Usuarios"
+        android:text="Productos"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,32 +16,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp"/>
 
-
-
-    <!-- Botón para agregar nuevo usuario -->
     <Button
-        android:id="@+id/btnAgregarUsuario"
+        android:id="@+id/btnAgregarProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar"
-        app:layout_constraintTop_toBottomOf="@id/textTituloUsuarios"
+        app:layout_constraintTop_toBottomOf="@id/textTituloProduct"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/editTextSearchUser"
+        android:id="@+id/editTextSearchProduct"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="Buscar"
-        app:layout_constraintTop_toBottomOf="@id/textTituloUsuarios"
+        app:layout_constraintTop_toBottomOf="@id/textTituloProduct"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="16dp"/>
 
-    <!-- RecyclerView para la tabla de usuarios -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewUsuarios"
+        android:id="@+id/recyclerViewProduct"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarUsuario"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarProduct"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
