--- a/app/src/main/res/layout/layout_modal_bill.xml
+++ b/app/src/main/res/layout/layout_modal_bill.xml
@@ -63,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Nombre"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textViewHeaderCantidad"
@@ -71,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Cantidad"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textViewHeaderPrecio"
@@ -79,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Precio"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textViewHeaderSubtotal"
@@ -87,7 +90,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Subtotal"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textViewHeaderTotal"
@@ -95,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Total"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -113,14 +118,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Subtotal:"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/textSubtotal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="$100.00" />
+                android:text="$100.00"
+                android:layout_marginTop="10dp"/>
         </LinearLayout>
 
         <LinearLayout
