--- a/app/src/main/res/layout/fragmeny_customer.xml
+++ b/app/src/main/res/layout/fragmeny_customer.xml
@@ -34,11 +34,64 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="16dp"/>
 
+    <LinearLayout
+        android:id="@+id/headerCustomer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSearchCustomer">
+
+        <TextView
+            android:id="@+id/textIdCustomer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            android:text="Id"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textIdentification"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Cédula"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textName"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Nombre"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textLastname"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Apellido"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textAdrressCustomer"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Dirección"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCustomer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarCustomer"
+        app:layout_constraintTop_toBottomOf="@id/headerCustomer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
