--- a/app/src/main/res/layout/fragmeny_product.xml
+++ b/app/src/main/res/layout/fragmeny_product.xml
@@ -33,11 +33,55 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="16dp"/>
 
+    <LinearLayout
+        android:id="@+id/headerProduct"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSearchProduct">
+
+        <TextView
+            android:id="@+id/textIdSearchProduct"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="11dp"
+            android:text="Id"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textDescriptionSearchProduct"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Descripcion"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textExistSearchProduct"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Existencia"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textPriceSearchProduct"
+            android:layout_width="0dp"
+            android:textSize="11dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Precio"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewProduct"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarProduct"
+        app:layout_constraintTop_toBottomOf="@id/headerProduct"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
