--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,10 +1,9 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:orientation="vertical">
+    android:layout_height="40dp">
 
     <TextView
         android:id="@+id/textViewIdSearchProduct"
@@ -12,9 +11,8 @@
         android:layout_height="wrap_content"
         android:text="id"
         android:textSize="11sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_weight="1"
+        />
 
     <TextView
         android:id="@+id/textViewDescriptionSearchProduct"
@@ -22,10 +20,8 @@
         android:layout_height="wrap_content"
         android:text="Descripcion"
         android:textSize="11sp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@+id/textViewIdSearchProduct"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_weight="1"
+        android:layout_marginStart="10dp"/>
 
     <TextView
         android:id="@+id/textViewExistSearchProduct"
@@ -34,9 +30,8 @@
         android:text="Existencia"
         android:textSize="11sp"
         android:layout_marginStart="40dp"
-        app:layout_constraintStart_toEndOf="@+id/textViewDescriptionSearchProduct"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_weight="1"
+        />
 
     <TextView
         android:id="@+id/textPriceSearchProduct"
@@ -45,7 +40,6 @@
         android:text="Precio"
         android:textSize="11sp"
         android:layout_marginStart="36dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewExistSearchProduct"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_weight="1"
+        />
+</LinearLayout>
