--- a/app/src/main/res/layout/fragment_facturas.xml
+++ b/app/src/main/res/layout/fragment_facturas.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,79 +8,88 @@
         android:id="@+id/textTituloFacturas"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Facturas"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Botón para agregar nueva factura -->
     <Button
         android:id="@+id/btnAgregarFactura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Agregar Factura"
-        app:layout_constraintTop_toBottomOf="@id/textTituloFacturas"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#2196F3"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
+        android:radius="12dp"
+        android:stateListAnimator="@null"
+        android:text="Agregar Factura"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textTituloFacturas" />
+
     <EditText
         android:id="@+id/editTextSearchFac"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Buscar"
-        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:hint="Buscar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnAgregarFactura" />
 
     <!-- Títulos -->
     <TextView
         android:id="@+id/textTituloIdOrden"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="ID Orden"
-        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textTituloFecha"
         android:textAlignment="center"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toStartOf="@id/textTituloFecha"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac" />
 
     <TextView
         android:id="@+id/textTituloFecha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Fecha"
-        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
-        app:layout_constraintStart_toEndOf="@id/textTituloIdOrden"
-        app:layout_constraintEnd_toStartOf="@id/textTituloAcciones"
         android:textAlignment="center"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toStartOf="@id/textTituloAcciones"
+        app:layout_constraintStart_toEndOf="@id/textTituloIdOrden"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac" />
 
     <TextView
         android:id="@+id/textTituloAcciones"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Acciones"
-        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac"
-        app:layout_constraintStart_toEndOf="@id/textTituloFecha"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textTituloFecha"
+        app:layout_constraintTop_toBottomOf="@id/editTextSearchFac" />
 
     <!-- RecyclerView para la lista de facturas -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFacturas"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/textTituloIdOrden"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textTituloIdOrden" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
