--- a/app/src/main/res/layout/fragment_usuarios.xml
+++ b/app/src/main/res/layout/fragment_usuarios.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar"
+        android:backgroundTint="#2196F3"
         app:layout_constraintTop_toBottomOf="@id/textTituloUsuarios"
         app:layout_constraintStart_toStartOf="parent"/>
 
