--- a/app/src/main/res/layout/fragmeny_customer.xml
+++ b/app/src/main/res/layout/fragmeny_customer.xml
@@ -21,6 +21,7 @@
         android:id="@+id/btnAgregarCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#2196F3"
         android:text="Agregar"
         app:layout_constraintTop_toBottomOf="@id/textTituloCustomer"
         app:layout_constraintStart_toStartOf="parent"/>
