--- a/app/src/main/res/layout/fragmeny_product.xml
+++ b/app/src/main/res/layout/fragmeny_product.xml
@@ -20,6 +20,7 @@
         android:id="@+id/btnAgregarProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#2196F3"
         android:text="Agregar"
         app:layout_constraintTop_toBottomOf="@id/textTituloProduct"
         app:layout_constraintStart_toStartOf="parent"/>
