--- a/app/src/main/res/layout/modal_add_customer.xml
+++ b/app/src/main/res/layout/modal_add_customer.xml
@@ -64,6 +64,7 @@
             android:id="@+id/cancelButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#FF0000"
             android:layout_weight="1"
             android:text="Cancelar"/>
 
@@ -71,6 +72,7 @@
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#2196F3"
             android:layout_weight="1"
             android:text="Guardar"/>
     </LinearLayout>
