--- a/app/src/main/res/layout/modal_add_product.xml
+++ b/app/src/main/res/layout/modal_add_product.xml
@@ -59,6 +59,7 @@
             android:id="@+id/cancelButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#FF0000"
             android:layout_weight="1"
             android:text="Cancelar"/>
 
@@ -66,6 +67,7 @@
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#2196F3"
             android:layout_weight="1"
             android:text="Guardar"/>
     </LinearLayout>
